
syntax = "proto3";

option csharp_namespace = "GrpcUploadService";

service UploadService {
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
}

message UploadFileRequest {
  string file_name = 1;
  bytes file_data = 2;
}

message UploadFileResponse {
  string response_code = 1;
  string response_message = 2;
  string url = 3;
}
